--- a/Hub/Dockerfile
+++ b/Hub/Dockerfile
@@ -4,7 +4,7 @@ FROM tensorflow/tensorflow:$VERSION
 
 RUN apt update && apt install -y vim tmux git wget
 RUN apt-get install -y libsm6 libxext6 libxrender-dev
-RUN apt-get install -y protobuf-compiler python-pil python-lxml python-tk
+RUN apt-get install -y protobuf-compiler python3-pil python3-lxml python3-tk
 
 RUN pip3 install -U pip
 
