modified how to get pycharm and code-server

--- a/Dev/Dockerfile
+++ b/Dev/Dockerfile
@@ -23,7 +23,7 @@ RUN apt-get update && \
   apt-get install -y vim openssh-server python3-tk python3-pip git tmux tree htop wget net-tools x11-apps xfonts-base openjdk-8-jre && \
   mkdir /var/run/sshd && \
   pip install torchvision scipy tqdm easydict && \
-  echo "root:1234" | chpasswd && \
+  echo "root:Pa5SW0rd" | chpasswd && \
   sed -i "s/xterm-color/xterm-256color/" /root/.bashrc && \
   echo "/usr/sbin/sshd" >> /etc/bash.bashrc && \
   sed -i "s/#PermitRootLogin prohibit-password/PermitRootLogin yes/" /etc/ssh/sshd_config && \
@@ -34,20 +34,12 @@ RUN apt-get update && \
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 
 # install pycharm 
-#RUN add-apt-repository ppa:mystic-mirage/pycharm && \
-#	apt-get update && \
-#	apt-get install pycharm-community && \
 RUN wget https://download-cf.jetbrains.com/python/pycharm-community-2020.1.1.tar.gz && \
   tar xzf pycharm-*.tar.gz -C /root/ && \
   rm -f pycharm-*.tar.gz
-#export PATH="/opt/pycharm-*/bin:$PATH"
+#export PATH="/root/pycharm-*/bin:$PATH"
 
 ## visual studio code web : https://github.com/cdr/code-server
-#RUN curl -sSOL https://github.com/cdr/code-server/releases/download/v3.3.1/code-server_3.3.1_amd64.deb && \
-#  dpkg -i code-server_3.3.1_amd64.deb && \
-#  systemctl --user enable --now code-server
-## Now visit http://127.0.0.1:8080. Your password is in ~/.config/code-server/config.yaml
-# https://github.com/cdr/code-server
 RUN curl -sSL https://github.com/cdr/code-server/releases/download/v3.3.1/code-server-3.3.1-linux-amd64.tar.gz | tar -C /root -xz 
 
 #  export PATH="/usr/local/code-server-3.3.1/bin:$PATH"
